Font capitalization fix, calendly icon add in footer, spacing in Film page, image sizing on project cards in projects

--- a/src/index.pcss
+++ b/src/index.pcss
@@ -59,17 +59,17 @@
 @layer base {
   @font-face {
     font-family: 'thasadith';
-    src: url('/src/assets/fonts/Thasadith-Regular.ttf') format('truetype');
+    src: url('/Fonts/Thasadith-Regular.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'space';
-    src: url('/src/assets/fonts/SpaceGrotesk-Regular.ttf') format('truetype');
+    src: url('/Fonts/SpaceGrotesk-Regular.ttf') format('truetype');
   }
 
    @font-face {
     font-family: 'thabold';
-    src: url('/src/assets/fonts/Thasadith-Bold.ttf') format('truetype');
+    src: url('/Fonts/Thasadith-Bold.ttf') format('truetype');
   }
 
   *,
